--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<title></title>
 </head>
 <body>
-    <h1>Hello World This is testing</h1>
+    <h1>Hello World!</h1>
     <script type="module" src='bundle.mjs'></script>
    
 </body>
